@@ -64,6 +64,10 @@ apt (0.9.5.2) UNRELEASED; urgency=low
   * French program and manpage translation update
   * Danish program translation by Joe Hansen. Closes: #675605
 
+  [ Thibaut Girka ]
+  * cmdline/apt-get.cc:
+    - complain correctly about :any build-dep on M-A:none packages
+
  -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 06 Jun 2012 23:54:01 +0200
 
 apt (0.9.5.1) unstable; urgency=low
